// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API - e2e gets a single city 1`] = `
Object {
  "data": Object {
    "city": Object {
      "name": "Barra do Bugres",
    },
  },
}
`;

exports[`API - e2e gets list of cities 1`] = `
Object {
  "data": Object {
    "cities": Array [
      Object {
        "name": "Barra do Bugres",
      },
      Object {
        "name": "Cáceres",
      },
      Object {
        "name": "Sinop",
      },
    ],
  },
}
`;
